# snapkit

./: .gitignore  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  Doxyfile.in  LICENSE-APACHE  LICENSE-APACHE2.0  LICENSE-MIT  cmake_uninstall.cmake.in  config.h.cmake  config.h.in  replace.sh  snapkit.pc.in  snapkit.sh
Modules/: CCxxFlags.cmake  SetSplint.cmake  SnapkitOptions.cmake
buildtools/: dependencies.sh
example/: CMakeLists.txt  example00.cc
include/: CMakeLists.txt
include/snapkit/: CMakeLists.txt  begin.h  call.h  debug.h  declspec.h
src/: CMakeLists.txt  debug.h  snapkit.cc
test/: CMakeLists.txt  test00.cc
